Fix modals
- adapt modal widths to smaller screens
- stop background scrolling when modal is opened
- minor fixes to font sizes
- avoid overlapping between .modal-header and button.close on smaller screens

--- a/src/sass/partials/_calculator.sass
+++ b/src/sass/partials/_calculator.sass
@@ -1,9 +1,6 @@
 .calculator
   h3
     margin-bottom: $sidebar-margin-y
-    @media (max-width: $max-width-sm)
-      font-size: 52px
-
 
   .form-group
     &:nth-child(4)
@@ -35,10 +32,21 @@
       padding-top: 0
       color: $purple
       font-size: 1.86rem
-      @media (max-width: $max-width-sm)
-        font-size: 58.1px
 
 
       .unit
         color: $purple
         font-size: .7em
+
+
+@media (max-width: $max-width-sm)
+  .calculator
+    h3
+      font-size: 52px
+
+    .total-amount
+      font-size: 58.1px
+
+  .modal
+    .calculator
+      padding-top: 5rem
